<resources>
    <string name="app_name">Smart Sms Solutions</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logo_description">Application logo</string>
    <string name="sender">Sender</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="recipients">Recipients</string>
    <string name="message_count">0 / 160 / 0</string>
    <string name="message">Message</string>
    <string name="sending_message">Sending message</string>
    <string name="signing_in">Signing In</string>
</resources>
