<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <EditText
        android:id="@+id/sender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/sender"
        android:inputType="textCapWords"
        android:maxLength="11"
        android:padding="8dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/recipients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/recipients"
        android:inputType="textMultiLine|phone"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/message_text_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sender"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle"
        android:gravity="bottom"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:maxHeight="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/message_text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/message_count"
        android:textAlignment="textEnd"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/send"
        app:layout_constraintEnd_toEndOf="@+id/send"
        app:layout_constraintStart_toEndOf="@+id/message" />


    <ImageButton
        android:id="@+id/send"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tint="#FFFFFF"
        app:srcCompat="@drawable/ic_send_black_24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="8dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/message"
        app:layout_constraintTop_toTopOf="@+id/message"/>


</android.support.constraint.ConstraintLayout>